# GuardLayer

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: error-log.md
.claude/rules/: api.md  extraction.md  voygr_client.md
.claude/tasks/: TASK-01-setup.md  TASK-02-models.md  TASK-03-extraction.md  TASK-04-voygr-client.md  TASK-05-cache.md  TASK-06-storage.md  TASK-07-pipeline.md  TASK-08-scoring.md  TASK-09-api.md  TASK-10-demo.md
api/: main.py  models.py
api/routes/: guard.py  health.py  history.py  stats.py
cache/: redis_cache.py
demo/: hard_prompts.json  run_demo.py
docs/: architecture.md  structure.md
extraction/: extractor.py  models.py  normalizer.py
pipeline/: guard.py  models.py
scoring/: confidence.py  models.py
storage/: migrate.py  postgres.py
storage/migrations/: 001_init.sql
tests/: test_api.py  test_cache.py  test_extraction.py  test_models.py  test_pipeline.py  test_scoring.py  test_storage.py  test_voygr_client.py
tests/fixtures/: llm_responses.json  voygr_responses.json
voygr/: client.py  models.py
